fix: model bill public users accurately
